# api/openapi.yaml
@@ -183,6 +183,24 @@ paths:
           description: "Job not found"
 
   /files:
+    get:
+      tags:
+        - "filestore"
+      summary: "Gets list of available files"
+      description: "Multiple status values can be provided with comma separated strings"
+      operationId: "getFiles"
+      produces:
+        - "application/xml"
+        - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/FileRecord"
+        "400":
+          description: "Invalid status value"
     post:
       tags:
         - "filestore"
@@ -328,9 +346,11 @@ definitions:
   FileRecord:
     type: "object"
     properties:
+      id:
+        type: "integer"
       path:
         type: "string"
-        description: "TinyBaker "
+        description: "TinyBaker file description"
     xml:
       name: "Tag"
 externalDocs:
